<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ufo_green"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/tb_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/bangladesh_green"
        android:textColorHint="@color/bangladesh_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPhoneReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tb_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/bangladesh_green"
        android:textColorHint="@color/bangladesh_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailReg" />

    <EditText
        android:id="@+id/etPassReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tb_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/bangladesh_green"
        android:textColorHint="@color/bangladesh_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneReg" />

    <EditText
        android:id="@+id/etPassConfirmationReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tb_confirmpassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/bangladesh_green"
        android:textColorHint="@color/bangladesh_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassReg" />

    <Button
        android:id="@+id/btnRegisterReg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/picton_blue"
        android:text="@string/btn_register"
        android:textColor="@color/white_chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfirmationReg" />
</androidx.constraintlayout.widget.ConstraintLayout>